tests/snapshots/yaml_suite_snapshots__yaml_suite_6FWR_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Block Scalar Keep
  from: NimYAML tests
  tags: literal scalar whitespace
  yaml: "--- |+\n ab\n␣\n␣␣\n...\n"
  tree: "+STR\n +DOC ---\n  =VAL |ab\\n\\n \\n\n -DOC ...\n-STR\n"
  json: "\"ab\\n\\n \\n\"\n"
  dump: "\"ab\\n\\n \\n\"\n...\n"
  emit: "--- |\n  ab\n\n␣␣␣\n...\n"
