tests/snapshots/yaml_suite_snapshots__yaml_suite_6FWR_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "\"ab\\n\\n \\n\"\n...\n"
  emit: "--- |\n  ab\n\n␣␣␣\n...\n"
  from: NimYAML tests
  json: "\"ab\\n\\n \\n\"\n"
  name: Block Scalar Keep
  tags: literal scalar whitespace
  tree: "+STR\n +DOC ---\n  =VAL |ab\\n\\n \\n\n -DOC ...\n-STR\n"
  yaml: "--- |+\n ab\n␣\n␣␣\n...\n"
