tests/snapshots/yaml_suite_snapshots__yaml_suite_6H3V_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Backslashes in singlequotes
  from: "@perlpunk"
  tags: scalar single
  yaml: "'foo: bar\\': baz'\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL 'foo: bar\\\\\n   =VAL :baz'\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo: bar\\\\\": \"baz'\"\n}\n"
  dump: "'foo: bar\\': baz'\n"
