tests/snapshots/yaml_suite_snapshots__yaml_suite_6H3V_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "'foo: bar\\': baz'\n"
  from: "@perlpunk"
  json: "{\n  \"foo: bar\\\\\": \"baz'\"\n}\n"
  name: Backslashes in singlequotes
  tags: scalar single
  tree: "+STR\n +DOC\n  +MAP\n   =VAL 'foo: bar\\\\\n   =VAL :baz'\n  -MAP\n -DOC\n-STR\n"
  yaml: "'foo: bar\\': baz'\n"
