tests/snapshots/yaml_suite_snapshots__yaml_suite_6HB6_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 6.1. Indentation Spaces
  from: "http://www.yaml.org/spec/1.2/spec.html#id2777865"
  tags: comment flow spec indent upto-1.2 whitespace
  yaml: "  # Leading comment line spaces are\n   # neither content nor indentation.\n␣␣␣␣\nNot indented:\n By one space: |\n    By four\n      spaces\n Flow style: [    # Leading spaces\n   By two,        # in flow style\n  Also by two,    # are neither\n  —»Still by two   # content nor\n    ]             # indentation.\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :Not indented\n   +MAP\n    =VAL :By one space\n    =VAL |By four\\n  spaces\\n\n    =VAL :Flow style\n    +SEQ []\n     =VAL :By two\n     =VAL :Also by two\n     =VAL :Still by two\n    -SEQ\n   -MAP\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"Not indented\": {\n    \"By one space\": \"By four\\n  spaces\\n\",\n    \"Flow style\": [\n      \"By two\",\n      \"Also by two\",\n      \"Still by two\"\n    ]\n  }\n}\n"
  dump: "Not indented:\n  By one space: |\n    By four\n      spaces\n  Flow style:\n  - By two\n  - Also by two\n  - Still by two\n"
