tests/snapshots/yaml_suite_snapshots__yaml_suite_6HB6_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 6.1. Indentation Spaces
  from: "http://www.yaml.org/spec/1.2/spec.html#id2777865"
  tags: comment flow spec indent upto-1.2 whitespace
  yaml: "  # Leading comment line spaces are\n   # neither content nor indentation.\n␣␣␣␣\nNot inden…"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :Not indented\n   +MAP\n    =VAL :By one space\n    =VAL |By four…"
  json: "{\n  \"Not indented\": {\n    \"By one space\": \"By four\\n  spaces\\n\",\n    \"Flow style\": [\n  …"
  dump: "Not indented:\n  By one space: |\n    By four\n      spaces\n  Flow style:\n  - By two\n  - A…"
